# near-smart-contract-rust-template

./: .gitignore  Cargo.toml  Makefile  Makefile.toml  README.md  args.sh  contract.sh  deploy.sh  dev-deploy.sh  init-args.js
src/: contract.rs  lib.rs  utils.rs
