[package]
authors = ["Jacob Lindahl <jacob@near.foundation>"]
edition = "2021"
name = "near-smart-contract-rust-template"
version = "0.1.0"

[dependencies]
near-sdk = "4.1.0"
near-contract-standards = "4.1.0"
near-contract-tools = "0.7.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"
