[package]
authors = ["Jacob Lindahl <jacob.lindahl@near.org>"]
edition = "2021"
name = "near-smart-contract-rust-template"
version = "0.1.0"

[dependencies]
near-contract-standards = "4.1.1"
near-sdk = "4.1.1"
near-sdk-contract-tools = "2.1.0"

[lib]
crate-type = ["cdylib"]

[lints.clippy]
pedantic = "warn"
missing-panics-doc = "allow"
module-name-repetitions = "allow"
must-use-candidate = "allow"
needless-pass-by-value = "allow"
wildcard-imports = "allow"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = true
panic = "abort"

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
